--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@ title: (Mis)anthropic selection
 ---
 
 <div id="home">
-  <h2 class="fade">Read:</h2>
+  <h2 class="fade">Musings:</h2>
   <ul class="posts">
     {% for post in site.posts %}
-      <li><a href="{{ post.url }}">{{ post.title }}</a><span>{{ post.date | date_to_string }}</span></li>
+      <li><a href="{{ post.url }}">{{ post.title }}</a> <span>{{ post.date | date_to_string }}</span></li>
     {% endfor %}
   </ul>
   
