--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@ layout: default
 title: (Mis)anthropic selection
 ---
 
-<div id="home">
-  <h2 class="fade">Musings:</h2>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><a href="{{ post.url }}">{{ post.title }}</a> <span>{{ post.date | date_to_string }}</span></li>
-    {% endfor %}
-  </ul>
-</div>
+<h2>Musings:</h2>
+<ul class="posts">
+  {% for post in site.posts %}
+    <li><a href="{{ post.url }}">{{ post.title }}</a> <span>{{ post.date | date_to_string }}</span></li>
+  {% endfor %}
+</ul>
