--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@ layout: default
 title: (Mis)anthropic selection
 ---
 
-<h2>Musings:</h2>
-<ul class="posts">
-  {% for post in site.posts %}
-    <li><a href="{{ post.url }}">{{ post.title }}</a> <span>{{ post.date | date_to_string }}</span></li>
-  {% endfor %}
-</ul>
+<header>
+  <h1>Posts</h1>
+</header>
+<section>
+  <ul class="posts">
+    {% for post in site.posts %}
+      <li><a href="{{ post.url }}">{{ post.title }}</a> <span>{{ post.date | date_to_string }}</span></li>
+    {% endfor %}
+  </ul>
+</section>
