--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: (Mis)anthropic selection
     {% for post in site.posts %}
       <li><a href="{{ post.url }}">{{ post.title }}</a>
           <span>{{ post.date | date_to_string }}</span>
-          (<a href="{{ post.url }}#disqus_thread">Comments</a>)
+          (<a href="{{ post.url }}#disqus_thread" class="comments-link">Comments</a>)
       </li>
     {% endfor %}
   </ul>
